tests/resources/invalid/type/definition/wrong_size_tuple.mamba
def (a, b) <- (1, 2, 4)
